--- a/manual/svelte5/index.html
+++ b/manual/svelte5/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>use-simple-debounce Svelte 5 Tests</title>
+    <title>Svelte5</title>
     <style>
       body {
         font-family: Arial, sans-serif;
